<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Firebase_UI.Client.ActUpdata_Clint">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edt_update_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/custom_edt"
                android:drawableEnd="@drawable/ic_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="@color/red" />

            <EditText
                android:id="@+id/edt_update_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/custom_edt"
                android:drawableEnd="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="@color/red" />

            <EditText
                android:id="@+id/edt_update_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/custom_edt"
                android:drawableEnd="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="8dp"
                android:textAlignment="viewStart"
                android:textColorHint="@color/red" />

            <EditText
                android:id="@+id/edt_update_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/custom_edt"
                android:drawableEnd="@drawable/ic_date"
                android:drawablePadding="8dp"
                android:hint="@string/birth_day"
                android:inputType="date"
                android:padding="8dp"
                android:textColorHint="@color/red" />

            <EditText
                android:id="@+id/edt_update_idPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_edt"
                android:drawableEnd="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/id_person"
                android:inputType="textVisiblePassword"
                android:padding="8dp"
                android:textColorHint="@color/red" />
            <EditText
                android:id="@+id/edt_update_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_edt"
                android:drawableEnd="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/location"
                android:inputType="textVisiblePassword"
                android:padding="8dp"
                android:textColorHint="@color/red" />

            <Button
                android:id="@+id/btn_update_update"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_btn_stroke"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_reg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/upDate" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>