<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"

    tools:context=".Fragment_UI.Profile.FragProfile">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="6dp">
        <!--com.google.android.material.appbar.CollapsingToolbarLayout-->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseActionView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/overlayBackground"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!--ImageView -->
            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/logo1"
                app:layout_collapseMode="parallax" />
            <!--           Toolbar -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_profile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:subtitleTextColor="@android:color/white"
                app:title="@string/name"
                app:titleMarginStart="35dp"
                app:titleTextColor="@android:color/black" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_profile_Approval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:backgroundTint="@color/fbutton_color_emerald"
        android:clickable="true"
        android:contentDescription="@string/upDate"
        android:elevation="6dp"
        android:focusable="true"
        android:src="@drawable/ic_edit"
        app:elevation="6dp"
        app:fabSize="auto"
        app:tint="@android:color/white"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|start"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="?attr/actionBarSize">

        <!--LinearLayout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--androidx.cardview.widget.CardView-->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="3dp">
                <!--LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- more details -->
                    <TextView
                        android:id="@+id/email_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!--androidx.cardview.widget.CardView-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/info"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phone_profile"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/phone"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/location_profile"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/location"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/birth_profile"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/birth_day"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/typeSex_profile"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/type_sex"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/idPesron_profile"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/id_person"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_team_profile"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="8dp"
                        android:text="@string/teams"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/team_writer_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/team_writer"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/team_drawer_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/team_drawer"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/team_signing_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/singing"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/team_acting_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/acting"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/team_design_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/design"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/team_makeup_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/makeup"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/team_clothes_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/clothes"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/team_photo_profile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="8dp"
                            android:text="@string/photo"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            android:visibility="invisible" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
